Add toList() instead of Collectors.toList()