@@ -1,14 +1,13 @@
-// Copyright 2021 Global Virtual Airlines Group. All Rights Reserved.
+// Copyright 2021, 2026 Global Virtual Airlines Group. All Rights Reserved.
 package org.deltava.beans;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * A utility class to filter beans with usage counts.
  * @param <T> the UseCount class
  * @author Luke
- * @version 10.2
+ * @version 12.5
  * @since 10.2
  * @see UseCount
  */
@@ -32,6 +31,6 @@ public interface UsageFilter<T extends UseCount> {
 	default List<T> filter(Collection<T> data) {
 		final int max = data.stream().mapToInt(UseCount::getUseCount).max().orElse(0);
 		final int total = data.stream().mapToInt(UseCount::getUseCount).sum();
-		return data.stream().filter(d -> filter(d, max, total)).collect(Collectors.toList());
+		return data.stream().filter(d -> filter(d, max, total)).toList();
 	}
 }
