@@ -1,8 +1,7 @@
-// Copyright 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2014, 2015, 2016, 2017, 2018, 2020, 2021, 2022, 2023 Global Virtual Airlines Group. All Rights Reserved.
+// Copyright 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2014, 2015, 2016, 2017, 2018, 2020, 2021, 2022, 2023, 2026 Global Virtual Airlines Group. All Rights Reserved.
 package org.deltava.beans.testing;
 
 import java.util.*;
-import java.util.stream.Collectors;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 
@@ -18,7 +17,7 @@ import org.deltava.util.system.SystemData;
 /**
  * A helper class to extract information from a user's examination/check ride history.
  * @author Luke
- * @version 11.1
+ * @version 12.5
  * @since 1.0
  */
 
@@ -140,7 +139,7 @@ public final class TestingHistoryHelper implements Cacheable {
 	 * @return a Collection of CheckRide beans
 	 */
 	public Collection<CheckRide> getCheckRides(int expirationDays) {
-		List<CheckRide> results = _tests.stream().filter(CheckRide.class::isInstance).map(CheckRide.class::cast).collect(Collectors.toList());
+		List<CheckRide> results = _tests.stream().filter(CheckRide.class::isInstance).map(CheckRide.class::cast).toList();
 		if (expirationDays == 0)
 			return results;
 		
@@ -259,7 +258,7 @@ public final class TestingHistoryHelper implements Cacheable {
 	 */
 	public Collection<Simulator> getSimulators(int days) {
 		Instant minDate = Instant.now().minus(days, ChronoUnit.DAYS).truncatedTo(ChronoUnit.DAYS);
-		List<Simulator> sims = _pireps.stream().filter(fr -> (fr.getSimulator() != Simulator.UNKNOWN)).filter(fr -> minDate.isBefore(fr.getDate())).map(FlightReport::getSimulator).collect(Collectors.toList());
+		List<Simulator> sims = _pireps.stream().filter(fr -> (fr.getSimulator() != Simulator.UNKNOWN)).filter(fr -> minDate.isBefore(fr.getDate())).map(FlightReport::getSimulator).toList();
 		Collections.reverse(sims);
 		return new LinkedHashSet<Simulator>(sims);
 	}
